# iso8601-etna

./: .gitignore  BUGS.md  TASKS.md  etna.toml
etna/: pyproject.toml
etna/etna_runner/: properties.py  runner.py  strategies.py  witnesses.py
patches/: is_iso8601_returns_false_on_exception_fde429d_1.patch  microsecond_float_rounding_81ff287_1.patch  negative_tz_minutes_dropped_d724fec_1.patch  parse_date_unwrapped_value_error_4e89389_1.patch  parse_error_not_value_error_4498905_1.patch  regex_requires_full_date_6d33d31_1.patch  year_unconstrained_dc7f577_1.patch  z_uses_default_tz_704a58e_1.patch
